test: updated the unit test to use JUnit 5