@@ -1,33 +1,34 @@
 package spoon.test.prettyprinter;
 
-import org.apache.commons.io.*;
-import org.hamcrest.*;
-import org.junit.*;
-import static org.junit.Assert.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+
+import org.apache.commons.io.FileUtils;
+import org.hamcrest.CoreMatchers;
+import org.junit.jupiter.api.BeforeAll;
 
 import spoon.Launcher;
-import spoon.compiler.*;
-import spoon.reflect.*;
-import spoon.reflect.code.CtComment.*;
-import spoon.reflect.declaration.*;
-import spoon.reflect.visitor.filter.*;
-import spoon.support.sniper.*;
+import spoon.compiler.Environment;
+import spoon.reflect.CtModel;
+import spoon.reflect.code.CtComment.CommentType;
+import spoon.reflect.declaration.CtClass;
+import spoon.reflect.visitor.filter.TypeFilter;
+import spoon.support.sniper.SniperJavaPrettyPrinter;
 import spoon.test.GitHubIssue;
-
-import java.io.*;
-import java.nio.charset.*;
-import java.nio.file.*;
 
 public class SniperAnnotatedEnumTest {
   private static final Path INPUT_PATH = Paths.get("src/test/java/");
   private static final Path OUTPUT_PATH = Paths.get("target/test-output");
 
-  @BeforeClass
+  @BeforeAll
   public static void setup() throws IOException {
     FileUtils.deleteDirectory(OUTPUT_PATH.toFile());
   }
 
-  @Test
   @GitHubIssue(issueNumber = 4779, fixed = true)
   public void annotatedEnumTest() throws IOException {
     runSniperJavaPrettyPrinter("spoon/test/prettyprinter/testclasses/AnnotatedEnum.java");
@@ -53,7 +54,7 @@ public class SniperAnnotatedEnumTest {
     assertThat("Output file for " + path + " should exist", OUTPUT_PATH.resolve(path).toFile().exists(),
         CoreMatchers.equalTo(true));
 
-    String content = new String(Files.readAllBytes(OUTPUT_PATH.resolve(path)), StandardCharsets.UTF_8);
+    String content = new String(Files.readString(OUTPUT_PATH.resolve(path)));
     assertThat(content.trim(), CoreMatchers.containsString("/* test */public enum"));
   }
 }
